# SoyDNGPNext

./: README.md  pyproject.toml
draw_pic/: draw_pic.ipynb  requirements.txt
soydngpnext/: SoyDNGP.py  SoyDNGP_res.py  __init__.py  data_process.py  eval.py  forward.py  reader.py  reader_cpu.py  remodel.py  train.py  utils.py
soydngpnext/data/: model.yaml  n_trait.yaml  p_trait.yaml  train_example.csv  train_example.vcf  traits.yaml
