[tool.poetry]
name = "soydngpnext"
version = "0.1.2"
description = "A Deeplearning driving bioinformatic toolkit."
authors = ["XtLab"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cudf = "0.6.1.post1"
cupy = "13.5.1"
matplotlib = "3.10.3"
numpy = "2.3.1"
onnxruntime = "1.22.1"
pandas = "2.3.1"
PyYAML = "6.0.2"
requests = "2.32.4"
scikit-learn = "1.7.0"
torch = "2.7.1"
tqdm = "4.67.1"

[tool.poetry.group.gpu.dependencies]
cudf = "0.6.1.post1"
cupy = "13.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
